Re-style the position of header/footer to avoid cover the content
And modifed the content's width of Geography Set block to avoid it too narrow when the content is too short.

--- a/frontend/scss/cells/_header.scss
+++ b/frontend/scss/cells/_header.scss
@@ -31,11 +31,6 @@
       top: 0;
     }
   }
-  & {
-    @media only screen and (max-width: 600px) {
-      position: sticky;
-    }
-  }
   &__column--menu {
     @include lessThan('lg') {
       height: calc(100% - 32px);
@@ -69,11 +64,11 @@
   // @include line-height-version-b;
   letter-spacing: 0.78px;
   background-color: $color-green;
-  position: fixed;
+  position: sticky;
   left: 0;
   width: 100%;
   height: 86px;
-  z-index: 99;
+  z-index: 100000;
   @include greaterThan('sm') {
     height: 100px;
   }
